--- a/_posts/2018-04-26-intro.markdown
+++ b/_posts/2018-04-26-intro.markdown
@@ -1,20 +1,20 @@
 ---
 layout: post
-title:  "эхлэл"
+title:  "Эхлэл"
 excerpt: "бичвэр => blog"
 date:   2018-04-26 15:39:00
 ---
 
 ### Эхлэл I:
 
-Аливаа түүх эхлэхэд, тэр зүйл урьд өмнөөс төлөвлөгдсөн эсвэл санаандгүйгээр тохиолдсон байж болох 2 талтай. Гэвч арай 
+      Аливаа түүх эхлэхэд, тэр зүйл урьд өмнөөс төлөвлөгдсөн эсвэл санаандгүйгээр тохиолдсон байж болох 2 талтай. Гэвч арай 
 сонирхолтой үүднээс бидэнд тохиолдож байгаа бүх зүйлс маань цаанаасаа төлөвлөгдсөн байсан гэж бодох юм бол Дэлхий ертөнц үүсэхээс
-эхлээд өнөөдрийг хүртэл энэ пост бичигдэх гэж 4,54... ТЭРБУМ жил хүлээгдсэн үг болж таарна. Хэрвээ энэ бүхэл бүтэн урт удаан үргэлжилсэн
-гинжин хэлхээ мэт цаг хугацааны аль нэг хэсэгт нь багахан өөрчлөлт ороход л бидний өнөөдрийн амьдрал өөр болох магадлал өндөр. Иймээс 
-бид бүхэнд байгаа цаг хугацаа бол орчлон ертөнц, дэлхий үүсэхээс эхлээд урт удаан хүлээгдсэн гайхамшигтай амжилттайгаар дамжигдан явсаар чамд ирсэн
-үнэт зүйл мэт. Тиймээс блог бичиж эхлэхээр шийдлээ :)
+эхлээд өнөөдрийг хүртэл энэ пост бичигдэх гэж 4,54... ТЭРБУМ жил хүлээгдсэн үг болж таарна. Хэрвээ энэ бүхэл бүтэн урт удаан 
+үргэлжилсэн гинжин хэлхээ мэт цаг хугацааны аль нэг хэсэгт нь багахан өөрчлөлт ороход л бидний өнөөдрийн амьдрал өөр болох магадлал
+өндөр. Иймээс бид бүхэнд байгаа цаг хугацаа бол орчлон ертөнц, дэлхий үүсэхээс эхлээд урт удаан хүлээгдсэн гайхамшигтай амжилттайгаар 
+дамжигдан явсаар бидэнд ирсэн үнэт зүйл мэт. Тиймээс блог бичиж эхлэхээр шийдлээ :)
 
-**Ингээд цаг хугацааны талаарх бидний ойлголтыг өөрчилсөн алдартай эрдэмтний гарын үсэгтэй номын зургийг энэ постыг бичиж байхдаа оруулъя гэж бодлоо**
+**Ингээд цаг хугацааны талаарх бидний ойлголтыг өөрчилсөн алдартай эрдэмтний гарын үсэгтэй номын зургийг энэ постыг бичиж байхдаа оруулъя гэж бодлоо.**
 
 <div class="imgright imgcap">
 <img src="/assets/time_curve.jpg">
